Create countdown timer
The count down timer was created using Timer object from Foundation. To edit timer return was necessary to create a Double extension where the method returns a formatted string.

--- a/QuizApp/Scenes/Keyword/KeywordViewController.storyboard
+++ b/QuizApp/Scenes/Keyword/KeywordViewController.storyboard
@@ -19,11 +19,15 @@
         <!--What are all the java keywords?-->
         <scene sceneID="BIS-yZ-NDH">
             <objects>
-                <viewController restorationIdentifier="KeyWordsViewController" storyboardIdentifier="KeyWordsViewController" title="What are all the java keywords?" id="NF9-Tw-JcF" customClass="KeyWordsViewController" customModule="QuizApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController restorationIdentifier="KeyWordsViewController" storyboardIdentifier="KeyWordsViewController" title="What are all the java keywords?" id="NF9-Tw-JcF" customClass="KeywordViewController" customModule="QuizApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="pfP-xK-BgW">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="IsD-TW-ksy">
+                                <rect key="frame" x="16" y="126.5" width="288" height="441.5"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </tableView>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hCr-nF-V80">
                                 <rect key="frame" x="0.0" y="418" width="320" height="150"/>
                                 <constraints>
@@ -33,10 +37,6 @@
                                     <segue destination="Jzt-lv-t3G" kind="embed" identifier="PainelViewController" id="7oB-6x-RCx"/>
                                 </connections>
                             </containerView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="IsD-TW-ksy">
-                                <rect key="frame" x="16" y="126.5" width="288" height="291.5"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                            </tableView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="iHi-pL-IJr">
                                 <rect key="frame" x="16" y="0.0" width="288" height="126.5"/>
                                 <subviews>
@@ -89,7 +89,7 @@
                         <constraints>
                             <constraint firstItem="hCr-nF-V80" firstAttribute="leading" secondItem="rjU-qd-HMZ" secondAttribute="leading" id="7R5-xo-yXo"/>
                             <constraint firstItem="iHi-pL-IJr" firstAttribute="top" secondItem="rjU-qd-HMZ" secondAttribute="top" id="KQK-UV-fEM"/>
-                            <constraint firstItem="hCr-nF-V80" firstAttribute="top" secondItem="IsD-TW-ksy" secondAttribute="bottom" id="QBb-L9-kf5"/>
+                            <constraint firstAttribute="bottom" secondItem="IsD-TW-ksy" secondAttribute="bottom" id="QBb-L9-kf5"/>
                             <constraint firstItem="Ute-Zv-8Zs" firstAttribute="top" secondItem="hCr-nF-V80" secondAttribute="top" id="Vxx-4r-pDa"/>
                             <constraint firstAttribute="bottom" secondItem="hCr-nF-V80" secondAttribute="bottom" id="a7b-GC-E9W"/>
                             <constraint firstItem="rjU-qd-HMZ" firstAttribute="trailing" secondItem="hCr-nF-V80" secondAttribute="trailing" id="bDc-Go-EyS"/>
@@ -126,7 +126,7 @@
                                 <rect key="frame" x="16" y="73" width="288" height="61"/>
                                 <color key="backgroundColor" red="1" green="0.51372549019607838" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="17"/>
-                                <state key="normal" title="Reset">
+                                <state key="normal" title="Start">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <userDefinedRuntimeAttributes>
@@ -141,14 +141,14 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="isH-Ib-N55">
                                 <rect key="frame" x="16" y="16" width="288" height="41"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="07/50" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q8F-MZ-Gr4">
-                                        <rect key="frame" x="0.0" y="0.0" width="98" height="41"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00/50" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q8F-MZ-Gr4">
+                                        <rect key="frame" x="0.0" y="0.0" width="101.5" height="41"/>
                                         <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="34"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="04:23" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WdT-Si-O95">
-                                        <rect key="frame" x="192" y="0.0" width="96" height="41"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WdT-Si-O95">
+                                        <rect key="frame" x="189" y="0.0" width="99" height="41"/>
                                         <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="34"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
